--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -3,6 +3,7 @@
 {% block app_content %}
 <div class="container-fluid">
   <div class="row">
+    {% if perms.app.view_issue %}
     <div class="col-lg-3 col-6">
       <div class="small-box text-bg-primary">
         <div class="inner">
@@ -14,6 +15,8 @@
         </a>
       </div>
     </div>
+    {% endif %}
+    {% if perms.app.view_page %}
     <div class="col-lg-3 col-6">
       <div class="small-box text-bg-success">
         <div class="inner">
@@ -25,6 +28,8 @@
         </a>
       </div>
     </div>
+    {% endif %}
+    {% if perms.app.view_document %}
     <div class="col-lg-3 col-6">
       <div class="small-box text-bg-warning">
         <div class="inner">
@@ -36,6 +41,8 @@
         </a>
       </div>
     </div>
+    {% endif %}
+    {% if perms.users.view_user %}
     <div class="col-lg-3 col-6">
       <div class="small-box text-bg-danger">
         <div class="inner">
@@ -47,6 +54,7 @@
         </a>
       </div>
     </div>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
