--- a/templates/allauth/layouts/base.html
+++ b/templates/allauth/layouts/base.html
@@ -14,6 +14,14 @@
   </div>
   <div class="card">
     <div class="card-body login-card-body">
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      {% endfor %}
+    {% endif %}
       {% block content %}
       {% endblock %}
     </div>
