--- a/templates/dashboard/private_base.html
+++ b/templates/dashboard/private_base.html
@@ -68,6 +68,16 @@
       <div class="container-fluid">
         <!--begin::Row-->
         <div class="row">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% endfor %}
+          {% endif %}
+        </div>
+        <div class="row">
           <div class="col-sm-6"><h3 class="mb-0">{% block page_title %}{{ page_title }}{% endblock %}</h3></div>
           <div class="col-sm-6">
             {% block breadcrumbs %}
